HW9 -- added -- Updated JDK version from 11 to 21 and upgraded GSON from 2.9.0 to 2.10.1. Improved LocalDateTimeAdapter for GitHub Action tests fixing.